# pickleball-sensor

./: README.md  client.py  pickle_client.py
app/: CMakeLists.txt  prj.conf
app/src/: main.c
